# cli-ai-py

./: .gitignore  README.md  pyproject.toml  test.py  test.py.bak
code_edit/: __init__.py  cli.py
code_edit/core/: __init__.py  diff.py  processor.py
