[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-edit"
version = "0.1.0"
description = "AI-powered code editing tool"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click>=8.1.0",
    "google-generativeai>=0.3.0",
    "rich>=13.0.0",
    "pygments>=2.15.0",
]

[project.scripts]
code-edit = "code_edit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["code_edit"] 